Fixed like button align

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -175,6 +175,9 @@ a {
 .text_child {
   margin-left: 2%;
   width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card {
